# hexlet-django-blog

./: README.md  pyproject.toml
hexlet_django_blog/: settings.py
hexlet_django_blog/article/: views.py
hexlet_django_blog/templates/articles/: index.html
