[tool.poetry]
name = "python-django-blog"
version = "0.1.0"
description = "A simple Django project that implements a simple blog"
authors = ["dmitry_rodin <dimoon-96@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
